--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,11 +3,11 @@ engines:
     enabled: true
     config:
       languages:
-      - ruby
+      - ruby:
       - javascript:
         mass_threshold: 200
-      - python
-      - php
+      - python:
+      - php:
   eslint:
     enabled: true
   fixme:
