--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,11 +3,11 @@ engines:
     enabled: true
     config:
       languages:
-      - ruby:
-      - javascript:
-        mass_threshold: 200
-      - python:
-      - php:
+        ruby:
+        javascript:
+          mass_threshold: 200
+        python:
+        php:
   eslint:
     enabled: true
   fixme:
