--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -10,6 +10,9 @@ engines:
         php:
   eslint:
     enabled: true
+    exclude_paths:
+    - "**/*"
+    - "!utils/timesheets.js"
   fixme:
     enabled: true
 ratings:
