--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,17 +3,16 @@ engines:
     enabled: true
     config:
       languages:
-        ruby:
         javascript:
           mass_threshold: 200
-        python:
-        php:
   eslint:
     enabled: true
     exclude_paths:
     - "**/*"
     - "!utils/timesheets.js"
   fixme:
+    enabled: true
+  rubocop:
     enabled: true
 ratings:
   paths:
